<resources>
    <string name="app_name">KlieneApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="rightAddress">The Right Address\nFor Shopping\nAnyday</string>
    <string name="quality">It is now very easy to reach the\nbest quality among all the\nproducts on the internet\n</string>
    <string name="start">Start</string>
    <string name="kliene">Kliene</string>
    <string name="register">Register</string>
    <string name="Login">Login</string>
    <string name="letsLogin">Lets\'s Login</string>
    <string name="dontHaveAccount">Don\'t have an account? Register</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgotPassword">Forgot Password</string>
    <string name="facebook">Facebook</string>
    <string name="google">Google</string>
    <string name="letsRegister">Let\'s Register</string>
    <string name="Do_you_have_account">Do you have an account?log in</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
</resources>