<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.LoginRegisterActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/blury_background"
        android:scaleType="centerCrop"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_kliene_app"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/kliene"
            android:gravity="center"
            android:textSize="35sp"
            android:textStyle="bold"
            android:drawablePadding="3dp"
            app:drawableStartCompat="@drawable/ic_kleine_shape"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="100dp"/>

        <TextView
            android:id="@+id/right_address_for_shopping"
            style="@style/h4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/rightAddress"
            android:textAlignment="center"
            android:textSize="35sp"
            app:layout_constraintTop_toBottomOf="@+id/tv_kliene_app"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="16dp"
            />

        <TextView
            android:id="@+id/very_easy_to_match"
            style="@style/h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/quality"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="@+id/right_address_for_shopping"
            app:layout_constraintStart_toStartOf="@+id/right_address_for_shopping"
            app:layout_constraintTop_toBottomOf="@+id/right_address_for_shopping"
            android:layout_marginTop="15dp"/>


        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_button_id"
            android:layout_width="@dimen/meduim_button_width"
            android:layout_height="@dimen/mudiem_button_height"
            style="@style/blueButtonStyle"
            android:text="@string/register"
            app:layout_constraintStart_toStartOf="@+id/very_easy_to_match"
            app:layout_constraintEnd_toEndOf="@+id/very_easy_to_match"
            app:layout_constraintTop_toBottomOf="@+id/very_easy_to_match"
            android:layout_marginTop="20dp"/>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/login_button_id"
            android:layout_width="@dimen/meduim_button_width"
            android:layout_height="@dimen/mudiem_button_height"
            style="@style/whiteButtonStyle"
            android:text="@string/Login"
            app:layout_constraintStart_toStartOf="@+id/register_button_id"
            app:layout_constraintEnd_toEndOf="@+id/register_button_id"
            app:layout_constraintTop_toBottomOf="@+id/register_button_id"
            android:layout_marginTop="10dp"
            android:elevation="8dp"/>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>