<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.IntroductionFragment">

    <ImageView
        android:id="@+id/left_texture_id"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_left"
        app:layout_constraintBottom_toBottomOf="@+id/guide_line_left_texture"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/right_texture_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:src="@drawable/texture_right"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintDimensionRatio="1:3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guide_line_left_texture" />

    <ImageView
        android:id="@+id/ellipse"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ellips"
        app:layout_constraintBottom_toBottomOf="@+id/guide_line_bottom_horiznental_ellipse"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="@+id/guide_line_right_vertical_ellipse"
        app:layout_constraintStart_toStartOf="@+id/guide_line_left_vertical_ellipse"
        app:layout_constraintTop_toTopOf="@+id/guide_line_top_horiznental_ellipse" />

    <TextView
        android:id="@+id/tv_right_address"
        style="@style/h4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/tv_right_margin"
        android:gravity="center"
        android:text="@string/rightAddress"
        android:textAlignment="center"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/ellipse"
        app:layout_constraintEnd_toEndOf="@+id/ellipse"
        app:layout_constraintStart_toStartOf="@+id/ellipse"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_quality"
        style="@style/h2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:gravity="center"
        android:text="@string/quality"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/tv_right_address"
        app:layout_constraintStart_toStartOf="@+id/tv_right_address"
        app:layout_constraintTop_toBottomOf="@+id/tv_right_address" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reqister_button_id"
        style="@style/blueButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/small_button_height"
        android:text="@string/register"
        app:layout_constraintBottom_toTopOf="@id/login_button_id"
        app:layout_constraintEnd_toEndOf="@id/tv_quality"
        app:layout_constraintStart_toStartOf="@id/tv_quality"
        app:layout_constraintTop_toBottomOf="@+id/tv_quality" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/login_button_id"
        style="@style/whiteButtonStyle"
        android:layout_width="0dp"
        android:layout_height="@dimen/small_button_height"
        android:text="@string/Login"
        app:layout_constraintEnd_toEndOf="@+id/reqister_button_id"
        app:layout_constraintStart_toStartOf="@+id/reqister_button_id"
        app:layout_constraintTop_toBottomOf="@+id/reqister_button_id"
        app:layout_constraintBottom_toBottomOf="@id/guideline_hor_down"/>


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_left_texture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.33" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_left_vertical_ellipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="62dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_right_vertical_ellipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_top_horiznental_ellipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.19" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_bottom_horiznental_ellipse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_hor_down"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />
</androidx.constraintlayout.widget.ConstraintLayout>